# Gmailtools

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
docs/: api.rst  conf.py
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  usage.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: index.rst.txt  usage.rst.txt
src/Gmailtools/: README.md  assign_label.py  classes.py  command.py  constants.py  mark_read.py  query_emails.py  test-gmailtools.sh  utils.py
src/Gmailtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
