[metadata]
name = Gmailtools
version = 0.1.7
author = Ryan Heslin
author_email = rh3788a@american.edu
description = A command-line interface for using the Gmail API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/gmailtools-rheslin
project_urls =
    Bug Tracker = https://github.com/pypa/gmailtools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
[options.entry_points]
    console_scripts =
         gmail_assign_label = Gmailtools.command:assign_label
         gmail_mark_read = Gmailtools.command:mark_read
         gmail_query_emails = Gmailtools.command:query_emails
[options.packages.find]
where = src
